Fri Dec 12 22:12:46 2008  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c, rational.c: do not use RUBY_VERSION_CODE.

Fri Dec 12 10:20:55 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* complex.c, rational.c: do not use RUBY_VERSION_CODE.

Tue Dec 16 12:41:52 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* configure.in (OBJDUMP, OBJCOPY): 
	  (darwin) MacPorts prefixes GNU binutils with 'g'.

Sun Dec  7 23:17:33 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in (LIBRUBY_SO): localizes non-public symbols.

	* configure.in (OBJDUMP, OBJCOPY): for dealing with binary files.

Mon Dec 15 10:00:36 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (btest-ruby): use RUNRUBY instead of MINIRUBY to load the
	  shared library.  [Bug #849]

Sun Dec 14 09:14:37 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* reverts r20713.

Sat Dec 13 22:17:30 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* common.mk (help): describes more targets.
	  based on a patch by Michael Klishin. [ruby-core:20523].

Sat Dec 13 16:04:48 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* encoding.c (default_external): endless recursion during
	  loading a locale encoding on some locale.
	  fixed by Nobuyuki Nakada.

Sat Dec 13 14:24:38 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/ruby/enc/test_utf16.rb: feature changed in r20626.
	  follows it.

Sat Dec 13 13:41:44 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/ruby/test_m17n_comb.rb: feature changed in r20626.
	  follows it.
 
Sat Dec 13 12:48:57 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/ruby/test_m17n.rb: feature changed in r20626.
	  follows it.

Sat Dec 13 12:38:16 2008  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/minitest/test.rb (MinTest::Unit#location): 
	  skips user-defined assertions as MiniTest's.
	  e.g. for test/ruby/test_m17n.rb.

Wed Dec 10 12:56:32 2008  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (enumerator_rewind): If the enclosed object